--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,9 @@
   "title": "VTEX Checkout Step Group",
   "description": "Step Group UI Component used by Checkout",
   "builders": {
-    "react": "3.x"
+    "docs": "0.x",
+    "react": "3.x",
+    "store": "0.x"
   },
   "dependencies": {
     "vtex.styleguide": "9.x"
