--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
-  "extends": "vtex-react",
+  "extends": "vtex",
+  "root": true,
   "env": {
-    "browser": true,
-    "es6": true
+    "node": true,
+    "es6": true,
+    "jest": true
   }
 }
