--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.20",
-    "@types/react-dom": "^16.9.5"
+    "@types/react-dom": "^16.9.5",
+    "vtex.css-handles": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.css-handles@0.4.1/public/@types/vtex.css-handles",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.91.2/public/@types/vtex.render-runtime",
+    "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.111.3/public/@types/vtex.styleguide"
   }
 }
