--- a/react/package.json
+++ b/react/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/node": "^13.7.2",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
