--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "builders": {
     "docs": "0.x",
     "react": "3.x",
-    "store": "0.x"
+    "store": "0.x",
+    "messages": "1.x"
   },
   "dependencies": {
     "vtex.styleguide": "9.x",
