--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "react-intl": "^3.12.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
