--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.checkout-container": "0.x",
-    "vtex.checkout-payment": "0.x"
+    "vtex.checkout-payment": "0.x",
+    "vtex.checkout-profile": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
