disable edit button when user can edit orderform

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "vtex.css-handles": "0.x",
     "vtex.checkout-container": "0.x",
     "vtex.checkout-payment": "0.x",
-    "vtex.checkout-profile": "0.x"
+    "vtex.checkout-profile": "0.x",
+    "vtex.order-manager": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
