--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "vtex.checkout-container": "0.x",
     "vtex.checkout-payment": "0.x",
     "vtex.checkout-profile": "0.x",
+    "vtex.checkout-shipping": "0.x",
     "vtex.css-handles": "0.x",
     "vtex.order-manager": "0.x",
     "vtex.styleguide": "9.x"
