Don't show IconEdit if the purchase is free

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "vtex.checkout-shipping": "0.x",
     "vtex.css-handles": "0.x",
     "vtex.order-manager": "0.x",
-    "vtex.styleguide": "9.x"
+    "vtex.styleguide": "9.x",
+    "vtex.order-payment": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
