Ask for user login when editing address step

--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,9 @@
     "vtex.checkout-shipping": "0.x",
     "vtex.css-handles": "0.x",
     "vtex.order-manager": "0.x",
-    "vtex.styleguide": "9.x",
-    "vtex.order-payment": "0.x"
+    "vtex.order-payment": "0.x",
+    "vtex.order-shipping": "0.x",
+    "vtex.styleguide": "9.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
